# Project2

./: .coverage  README.md  config.py  main.py  pyproject.toml
data/: vacancies.txt
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_get_vacancies_py.html  z_145eef247bfb46b6_hh_api_py.html  z_145eef247bfb46b6_json_saver_py.html  z_145eef247bfb46b6_saver_py.html  z_145eef247bfb46b6_txt_saver_py.html  z_145eef247bfb46b6_utils_py.html  z_145eef247bfb46b6_vacancy_py.html
src/: get_vacancies.py  hh_api.py  json_saver.py  saver.py  txt_saver.py  utils.py  vacancy.py
test/: test_json_saver.py  test_txt_saver.py
